--- a/assets/AssetManifest.json
+++ b/assets/AssetManifest.json
@@ -1,1 +1,1 @@
-{"packages/cupertino_icons/assets/CupertinoIcons.ttf":["packages/cupertino_icons/assets/CupertinoIcons.ttf"],"assets/tblCondition.json":["assets/tblCondition.json"]}
+{"packages/cupertino_icons/assets/CupertinoIcons.ttf":["packages/cupertino_icons/assets/CupertinoIcons.ttf"],"fonts/Roboto-Bold.ttf":["fonts/Roboto-Bold.ttf"],"fonts/Roboto-Regular.ttf":["fonts/Roboto-Regular.ttf"],"assets/tblCondition.json":["assets/tblCondition.json"]}
